--- a/style.css
+++ b/style.css
@@ -80,8 +80,14 @@ body {
     transform: scale(1.1);
   }
   
-  footer {
+/*   footer {
     text-align: center;
+    padding: 20px;
+  } */
+ footer {
+    max-width: 78%; 
+    margin-left: 18px;
+    border-radius: 10px;
     padding: 20px;
   }
   section#contact {
