--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
     padding: 20px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     transition: all 0.3s ease-in-out;
-    width: 80% !important;
+/*     width: 80% !important; */
     border-radius: 10px;
   }
   footer:hover {
