--- a/style.css
+++ b/style.css
@@ -367,6 +367,16 @@ body {
       footer{
         width: 100% !important;
       }
+        footer img{
+        width: 70px !important;
+        height: 28px !important;
+        margin-top: -12px !important;
+        margin-left: 7px !important;
+      }
+      footer a{
+        margin-left: -10px !important;
+        margin-right: 3px !important;
+      }
 
   }
 
