--- a/style.css
+++ b/style.css
@@ -439,11 +439,11 @@ body {
   
   .Imageprofile  {
     margin-top: -3px !important;
-    width: 125px;
-    height: 150px;
+     width: 150px;
+    height: 160px;
     border-radius: 50%;
     margin: 20px 0;
-    object-fit: cover;
+    object-fit:fill;
     z-index: 99999;
     box-shadow: 0px 10px 20px rgba(0,0,0,0.3);
     border: 5px solid rgba(255, 255, 255, 0.484);
