--- a/style.css
+++ b/style.css
@@ -1,5 +1,70 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: rgb(255, 255, 255);
+    transition: all 0.3s ease-in-out;
+    overflow-x: hidden;
+  }
+  body.dark {
+    background: rgba(0, 0, 0, 0.753) !important;
+    color: rgb(0, 0, 0);
+    box-shadow: inset 0 0 20px rgb(69, 67, 67) !important;
+  }
+
+  .theme-toggle {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+  
+  .theme-toggle input[type="checkbox"] {
+    display: none;
+  }
+  
+  .theme-toggle label {
+    width: 40px;
+    height: 20px;
+    background-color: #333;
+    display: block;
+    border-radius: 20px;
+    position: relative;
+    transition: all 0.3s;
+  }
+  
+  .theme-toggle label:before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 0.5px solid black;
+    transition: all 0.3s;
+  }
+  
+  .theme-toggle input[type="checkbox"]:checked + label {
+    background-color: rgb(255, 255, 255);
+    border: 0.5px solid black;
+    overflow: hidden;
+  }
+  
+  
+  .theme-toggle input[type="checkbox"]:checked + label:before {
+    left: calc(100% - 20px);
+  }
+  
+  input[type="checkbox"]:checked ~ body {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  @media screen and (max-width:460px) {
+    .theme-toggle{
+      top: 50px;
+      right:5px;
+    }
+    
   }
   
   header nav {
@@ -36,11 +101,13 @@ body {
   }
   
   section {
+    background-color: lightgray;  
     width: 80%;
     margin-bottom: 50px;
   }
   
   section h2 {
+    color: rgb(0, 0, 0);
     text-align: center;
     margin-bottom: 20px;
   }
@@ -80,10 +147,6 @@ body {
     transform: scale(1.1);
   }
   
-/*   footer {
-    text-align: center;
-    padding: 20px;
-  } */
  footer {
     max-width: 78%; 
     margin-left: 18px;
