--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255) !important ;
     transition: all 0.3s ease-in-out;
     overflow-x: hidden;
   }
@@ -221,12 +221,6 @@ body {
   section#contact button[type="submit"]:hover {
     transform: translateY(-10px);
     box-shadow: 2px 12px 20px rgba(0, 0, 0, 0.5);
-  }
-  
-
-  body {
-    background: linear-gradient(45deg, #ccc, #fff);
-    transition: all 0.3s ease-in-out;
   }
   .project{
     margin-bottom: 10px;
